--- a/src/main/resources/HTMLPage1.html
+++ b/src/main/resources/HTMLPage1.html
@@ -59,10 +59,28 @@
             <textarea id="o-dif">
             </textarea>
         </div>
+        <div class="col" style="width:20%; height:1px">
+        </div>
         <div class="col">
             <textarea id="t-div">
             </textarea>
         </div>
     </div>
+    <div class="row">
+        <div class="col">
+          <button id="getOrderAccumulation">
+              getOrderAccumulation
+          </button>
+        </div>
+        <div div class="col" style="width:20%; height:1px">
+        </div>
+        <div class="col">
+            <button id="getTradeAccumulation">
+                getTradeAccumulation
+            </button>
+        </div>
+    </div>
+    <script src="jquery-3.6.3.js"></script>
+    <script src="Logic.js"></script>
 </body>
 </html>
